--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-CXX=/home/bubble/wii/devkitPPC/bin/powerpc-eabi-c++
+###CXX=/home/bubble/wii/devkitPPC/bin/powerpc-eabi-c++
+CXX=g++
 CC=
 CXXFLAGS=-I../include
 LIBS=-L../lib
@@ -7,12 +8,11 @@ all: wiiconfig wiijoker
 	$(CXX) -o wiijoker *.o
 
 wiiconfig:
-	@echo "****************************"
-	@echo "Edit the Makefile e.g. the correct powerpc-eabi-c++ crosscompiler, see https://sf.net/projects/devkitpro"
-	@echo "****************************"
+###	@echo "****************************"
+###	@echo "Edit the Makefile e.g. the correct powerpc-eabi-c++ crosscompiler, see https://sf.net/projects/devkitpro"
+###	@echo "****************************"
 
-wiijoker: main.o fb.o
-####	$(CXX) $(CXXFLAGS) -c $<
+wiijoker: main.o fb.o obs.o obs_screen.o
 
 clean:
 	rm -f *.o wiijoker
