--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ wiiconfig:
 ###	@echo "Edit the Makefile e.g. the correct powerpc-eabi-c++ crosscompiler, see https://sf.net/projects/devkitpro"
 ###	@echo "****************************"
 
-wiijoker: main.o fb.o obs.o obs_screen.o
+wiijoker: main.o fb.o obs.o obs2.o obs_screen.o reg.o vireg.o
 
 clean:
 	rm -f *.o wiijoker
